--- a/app/assets/javascripts/property_web_scraper/spp_lite.js.erb
+++ b/app/assets/javascripts/property_web_scraper/spp_lite.js.erb
@@ -1,15 +1,15 @@
 <%
 # ...
-if Rails.env.development?
-  require_asset ("vue-2.5.9.dev")
-else
-  require_asset ("vue-2.5.11.prod")
-end
+# if Rails.env.development?
+#   require_asset ("vue-2.5.9.dev")
+# else
+#   require_asset ("vue-2.5.11.prod")
+# end
 
-require_asset ("vue-social-sharing-2.3.3")
-require_asset ("vue-google-maps-0.8.4")
-require_asset ("./vue/inmo-map")
-require_asset ("./vue/vue-main")
+# require_asset ("vue-social-sharing-2.3.3")
+# require_asset ("vue-google-maps-0.8.4")
+# require_asset ("./vue/inmo-map")
+# require_asset ("./vue/vue-main")
 
 %>
 
