--- a/app/views/layouts/property_web_scraper/spp_vuetify.html.erb
+++ b/app/views/layouts/property_web_scraper/spp_vuetify.html.erb
@@ -4,30 +4,29 @@
 <head>
   <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
   <link href="https://unpkg.com/vuetify/dist/vuetify.min.css" rel="stylesheet">
+  <%= stylesheet_link_tag    "property_web_scraper/spp_vuetify", media: "all" %>
+
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
 </head>
 
 <body>
-  <div id="app">
+  <div id="main-vue">
     <%= yield %>
   </div>
-  <script src="https://unpkg.com/vue/dist/vue.js"></script>
-  <script src="https://unpkg.com/vuetify/dist/vuetify.js"></script>
-  <script>
-  // var carouselPhotos = [{
-  //   src: '/static/doc-images/carousel/squirrel.jpg'
-  // }];
-  // var carouselPhotos = @markers.to_json;
-  var carouselPhotos = <%== @listing.image_urls.to_json %>;
-  debugger;
 
-  new Vue({
-    el: '#app',
-    data: {
-      carouselPhotos: carouselPhotos
-    }
-  })
+  <script>
+  var PWSAPP = PWSAPP || {};
+
+  var carouselPhotos = <%== @listing.image_urls.to_json %>;
+  PWSAPP.vueData = {
+    title: "rrrr",
+    carouselPhotos: carouselPhotos
+  }
   </script>
+
+  <%= javascript_pack_tag 'spp_vuetify' %>
+  <link href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css" rel="stylesheet">
+
 </body>
 
 </html>
