Clean up spp_vuetify

--- a/app/assets/stylesheets/property_web_scraper/spp_vuetify.css
+++ b/app/assets/stylesheets/property_web_scraper/spp_vuetify.css
@@ -3,17 +3,17 @@
 */
 
 
-.vue-map-container {
+/*.vue-map-container {
   width: 100%;
   height: 100%;
 }
-.vue-map-container .vue-map {
-  /*  width: 100%;
-  height: 100%;
 */
-  width: 500px;
-  height: 300px
+.vue-map-container .vue-map {
+  min-height: 500px
 }
 
+.main-header {
+  font-weight: 500;
+}
 
 
