--- a/app/views/property_web_scraper/single_property_view/spp_vuetify/show.html.erb
+++ b/app/views/property_web_scraper/single_property_view/spp_vuetify/show.html.erb
@@ -1,270 +1,161 @@
-   <v-app light>
-    <v-toolbar class="white">
-      <v-toolbar-title v-text="title"></v-toolbar-title>
-    </v-toolbar>
-    <main>
-      <v-content>
-        <section>
-          <v-parallax src="<%= @listing.image_urls[0] %>" height="600">
-            <v-layout
-              column
-              align-center
-              justify-center
-              class="white--text"
-            >
-              <img src="assets/vuetify.png" alt="Vuetify.js" height="200">
-              <h1 class="white--text mb-2 display-1 text-xs-center">Parallax Template</h1>
-              <div class="subheading mb-3 text-xs-center">Powered by Vuetify</div>
-              <v-btn
-                class="blue lighten-2 mt-5"
-                dark
-                large
-                href="/pre-made-themes"
-              >
-                Get Started
-              </v-btn>
-            </v-layout>
-          </v-parallax>
-        </section>
+<section>
+  <v-parallax src="<%= @main_image_url %>" height="600">
+    <v-layout column align-center justify-center class="white--text">
+      <h1 class="main-header mb-2 display-4 primary--text text-xs-center">Property For Sale</h1>
+      <div class="mb-3 display-2 text-xs-center"><%= @listing.title %></div>
 
-        <section>
-          <v-layout
-            column
-            wrap
-            class="my-5"
-            align-center
-          >
-            <v-flex xs12 sm4 class="my-3">
-              <div class="text-xs-center">
-                <h2 class="headline">The best way to start developing</h2>
-                <span class="subheading">
+    </v-layout>
+  </v-parallax>
+</section>
+<section style="display: none;">
+  <v-layout column wrap class="my-5" align-center>
+    <v-flex xs12 sm4 class="my-3">
+      <div class="text-xs-center">
+        <h2 class="headline">The best way to start developing</h2>
+        <span class="subheading">
                   Cras facilisis mi vitae nunc 
                 </span>
-              </div>
-            </v-flex>
-            <v-flex xs12>
-              <v-container grid-list-xl>
-                <v-layout row wrap align-center>
-                  <v-flex xs12 md4>
-                    <v-card class="elevation-0 transparent">
-                      <v-card-text class="text-xs-center">
-                        <v-icon x-large class="blue--text text--lighten-2">color_lens</v-icon>
-                      </v-card-text>
-                      <v-card-title primary-title class="layout justify-center">
-                        <div class="headline text-xs-center">Material Design</div>
-                      </v-card-title>
-                      <v-card-text>
-                        Cras facilisis mi vitae nunc lobortis pharetra. Nulla volutpat tincidunt ornare. 
-                        Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. 
-                        Nullam in aliquet odio. Aliquam eu est vitae tellus bibendum tincidunt. Suspendisse potenti. 
-                      </v-card-text>
-                    </v-card>
-                  </v-flex>
-                  <v-flex xs12 md4>
-                    <v-card class="elevation-0 transparent">
-                      <v-card-text class="text-xs-center">
-                        <v-icon x-large class="blue--text text--lighten-2">flash_on</v-icon>
-                      </v-card-text>
-                      <v-card-title primary-title class="layout justify-center">
-                        <div class="headline">Fast development</div>
-                      </v-card-title>
-                      <v-card-text>
-                        Cras facilisis mi vitae nunc lobortis pharetra. Nulla volutpat tincidunt ornare. 
-                        Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. 
-                        Nullam in aliquet odio. Aliquam eu est vitae tellus bibendum tincidunt. Suspendisse potenti. 
-                      </v-card-text>
-                    </v-card>
-                  </v-flex>
-                  <v-flex xs12 md4>
-                    <v-card class="elevation-0 transparent">
-                      <v-card-text class="text-xs-center">
-                        <v-icon x-large class="blue--text text--lighten-2">build</v-icon>
-                      </v-card-text>
-                      <v-card-title primary-title class="layout justify-center">
-                        <div class="headline text-xs-center">Completely Open Sourced</div>
-                      </v-card-title>
-                      <v-card-text>
-                        Cras facilisis mi vitae nunc lobortis pharetra. Nulla volutpat tincidunt ornare. 
-                        Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. 
-                        Nullam in aliquet odio. Aliquam eu est vitae tellus bibendum tincidunt. Suspendisse potenti. 
-                      </v-card-text>
-                    </v-card>
-                  </v-flex>
-                </v-layout>
-              </v-container>
-            </v-flex>
-          </v-layout>
-        </section>
-
-        <section>
-          <v-parallax src="<%= @listing.image_urls[0] %>" height="380">
-            <v-layout column align-center justify-center>
-              <div class="headline white--text mb-3 text-xs-center">Web development has never been easier</div>
-              <em>Kick-start your application today</em>
-              <v-btn
-                class="blue lighten-2 mt-5"
-                dark
-                large
-                href="/pre-made-themes"
-              >
-                Get Started
-              </v-btn>
-            </v-layout>
-          </v-parallax>
-        </section>
-
-        <section>
-          <v-container grid-list-xl>
-            <v-layout row wrap justify-center class="my-5">
-              <v-flex xs12 sm4>
-                <v-card class="elevation-0 transparent">
-                  <v-card-title primary-title class="layout justify-center">
-                    <div class="headline">Company info</div>
-                  </v-card-title>
-                  <v-card-text>
-                    Cras facilisis mi vitae nunc lobortis pharetra. Nulla volutpat tincidunt ornare. 
-                    Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. 
-                    Nullam in aliquet odio. Aliquam eu est vitae tellus bibendum tincidunt. Suspendisse potenti. 
-                  </v-card-text>
-                </v-card>
-              </v-flex>
-              <v-flex xs12 sm4 offset-sm1>
-                <v-card class="elevation-0 transparent">
-                  <v-card-title primary-title class="layout justify-center">
-                    <div class="headline">Contact us</div>
-                  </v-card-title>
-                  <v-card-text>
-                    Cras facilisis mi vitae nunc lobortis pharetra. Nulla volutpat tincidunt ornare.
-                  </v-card-text>
-                  <v-list class="transparent">
-                    <v-list-tile>
-                      <v-list-tile-action>
-                        <v-icon class="blue--text text--lighten-2">phone</v-icon>
-                      </v-list-tile-action>
-                      <v-list-tile-content>
-                        <v-list-tile-title>777-867-5309</v-list-tile-title>
-                      </v-list-tile-content>
-                    </v-list-tile>
-                    <v-list-tile>
-                      <v-list-tile-action>
-                        <v-icon class="blue--text text--lighten-2">place</v-icon>
-                      </v-list-tile-action>
-                      <v-list-tile-content>
-                        <v-list-tile-title>Chicago, US</v-list-tile-title>
-                      </v-list-tile-content>
-                    </v-list-tile>
-                    <v-list-tile>
-                      <v-list-tile-action>
-                        <v-icon class="blue--text text--lighten-2">email</v-icon>
-                      </v-list-tile-action>
-                      <v-list-tile-content>
-                        <v-list-tile-title>john@vuetifyjs.com</v-list-tile-title>
-                      </v-list-tile-content>
-                    </v-list-tile>
-                  </v-list>
-                </v-card>
-              </v-flex>
-            </v-layout>
-          </v-container>
-        </section>
-
-    <template>
-      <v-carousel hide-delimiters>
-        <v-carousel-item v-for="(item,i) in carouselPhotos" v-bind:src="item" :key="i"></v-carousel-item>
-      </v-carousel>
-    </template>
-
-
-<section>
-  <div id="index-banner" class="parallax-container">
-  <div class="section no-pad-bot">
-    <div class="container">
-      <br>
-      <br>
-      <h1 class="header center teal-text text-lighten-2">Property For Sale</h1>
-      <div class="row center">
-        <h5 class="header col s12 light"><%= @listing.title %></h5>
       </div>
-      <div class="row center">
-      </div>
-      <br>
-      <br>
-    </div>
-  </div>
-  <div class="parallax"><img src="<%= @main_image_url %>" alt="main image 1"></div>
-</div>
-<div class="container">
-  <div class="section">
-    <!--   Icon Section   -->
-    <div class="row">
-      <div class="col s12 m12">
-        <h3>Description</h3>
-        <%== @listing.description %>
-          <br>
-          <br>
-      </div>
-      <div class="col s12 m12">
-        <social-sharing class="center" inline-template>
-          <div class="social-icons icon-circle">
-            <network network="facebook">
-              <i class="fa fa-facebook"></i>
-            </network>
-            <network network="googleplus">
-              <i class="fa fa-google-plus"></i>
-            </network>
-            <network network="linkedin">
-              <i class="fa fa-linkedin"></i>
-            </network>
-            <network network="twitter">
-              <i class="fa fa-twitter"></i>
-            </network>
-          </div>
-        </social-sharing>
-      </div>
-    </div>
-  </div>
-</div>
-  <%= render '/property_web_scraper/single_property_view/property_info_list' %>
-    <div class="parallax-container valign-wrapper">
-      <div class="section no-pad-bot">
-        <div class="container">
-          <div class="row center">
-            <h5 class="header col s12 light"><%= @listing.title %></h5>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="">
-      <div class="section" style="padding-top: 0px;">
-        <div class="row">
-          <div>
-            
-    <inmo-map ref="inmomap" style="min-height: 600px;"  :markers="<%= @markers.to_json %>"   :zoom="15">
-    </inmo-map>
-
-          </div>
-
-        </div>
-      </div>
-    </div>
-
+    </v-flex>
+    <v-flex xs12>
+      <v-container grid-list-xl>
+        <v-layout row wrap align-center>
+          <v-flex xs12 md4>
+            <v-card class="elevation-0 transparent">
+              <v-card-text class="text-xs-center">
+                <v-icon x-large class="blue--text text--lighten-2">color_lens</v-icon>
+              </v-card-text>
+              <v-card-title primary-title class="layout justify-center">
+                <div class="headline text-xs-center">Material Design</div>
+              </v-card-title>
+              <v-card-text>
+                Cras facilisis mi vitae nunc lobortis pharetra. Nulla volutpat tincidunt ornare. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam in aliquet odio. Aliquam eu est vitae tellus bibendum tincidunt. Suspendisse potenti.
+              </v-card-text>
+            </v-card>
+          </v-flex>
+          <v-flex xs12 md4>
+            <v-card class="elevation-0 transparent">
+              <v-card-text class="text-xs-center">
+                <v-icon x-large class="blue--text text--lighten-2">flash_on</v-icon>
+              </v-card-text>
+              <v-card-title primary-title class="layout justify-center">
+                <div class="headline">Fast development</div>
+              </v-card-title>
+              <v-card-text>
+                Cras facilisis mi vitae nunc lobortis pharetra. Nulla volutpat tincidunt ornare. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam in aliquet odio. Aliquam eu est vitae tellus bibendum tincidunt. Suspendisse potenti.
+              </v-card-text>
+            </v-card>
+          </v-flex>
+          <v-flex xs12 md4>
+            <v-card class="elevation-0 transparent">
+              <v-card-text class="text-xs-center">
+                <v-icon x-large class="blue--text text--lighten-2">build</v-icon>
+              </v-card-text>
+              <v-card-title primary-title class="layout justify-center">
+                <div class="headline text-xs-center">Completely Open Sourced</div>
+              </v-card-title>
+              <v-card-text>
+                Cras facilisis mi vitae nunc lobortis pharetra. Nulla volutpat tincidunt ornare. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam in aliquet odio. Aliquam eu est vitae tellus bibendum tincidunt. Suspendisse potenti.
+              </v-card-text>
+            </v-card>
+          </v-flex>
+        </v-layout>
+      </v-container>
+    </v-flex>
+  </v-layout>
 </section>
 
+<section>
+  <v-container grid-list-xl>
+    <v-layout row wrap justify-center class="my-5">
+      <v-flex xs12 sm12>
+        <div class="">
+          <h3>Description</h3>
+          <%== @listing.description %>
+            <br>
+            <br>
+          <social-sharing class="text-xs-center" inline-template>
+            <div class="social-icons icon-circle">
+              <network network="facebook">
+                <i class="fa fa-facebook"></i>
+              </network>
+              <network network="googleplus">
+                <i class="fa fa-google-plus"></i>
+              </network>
+              <network network="linkedin">
+                <i class="fa fa-linkedin"></i>
+              </network>
+              <network network="twitter">
+                <i class="fa fa-twitter"></i>
+              </network>
+            </div>
+          </social-sharing>
+        </div>
+      </v-flex>
+    </v-layout>
+  </v-container>
+</section>
 
-        <v-footer class="blue darken-2">
-          <v-layout row wrap align-center>
-            <v-flex xs12>
-              <div class="white--text ml-3">
-                Made with
-                <v-icon class="red--text">favorite</v-icon>
-                by <a class="white--text" href="https://vuetifyjs.com" target="_blank">Vuetify</a>
-                and <a class="white--text" href="https://github.com/vwxyzjn">Costa Huang</a>
-              </div>
-            </v-flex>
-          </v-layout>
-        </v-footer>
-      </v-content>
-    </main>
-    <v-content>
-  </v-content>
-</v-app>
+<section>
+  <v-carousel>
+    <v-carousel-item v-for="(item,i) in carouselPhotos" v-bind:src="item" :key="i"></v-carousel-item>
+  </v-carousel>
+</section>
+
+<section>
+  <v-container grid-list-xl>
+    <v-layout row wrap justify-center class="my-5">
+      <v-flex xs12 sm4>
+        <v-card class="elevation-0 transparent">
+          <v-card-title primary-title class="layout justify-center">
+            <div class="headline">About PropertyWebScraper </div>
+          </v-card-title>
+          <v-card-text>
+            Cras facilisis mi vitae nunc lobortis pharetra. Nulla volutpat tincidunt ornare. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam in aliquet odio. Aliquam eu est vitae tellus bibendum tincidunt. Suspendisse potenti.
+          </v-card-text>
+        </v-card>
+      </v-flex>
+      <v-flex xs12 sm4 offset-sm1>
+        <v-card class="elevation-0 transparent">
+          <v-card-title primary-title class="layout justify-center">
+            <div class="headline">Contact PropertyWebScraper</div>
+          </v-card-title>
+          <v-card-text>
+            Cras facilisis mi vitae nunc lobortis pharetra. Nulla volutpat tincidunt ornare.
+          </v-card-text>
+          <v-list class="transparent">
+            <v-list-tile>
+              <v-list-tile-action>
+                <v-icon class="blue--text text--lighten-2">phone</v-icon>
+              </v-list-tile-action>
+              <v-list-tile-content>
+                <v-list-tile-title>777-867-5309</v-list-tile-title>
+              </v-list-tile-content>
+            </v-list-tile>
+            <v-list-tile>
+              <v-list-tile-action>
+                <v-icon class="blue--text text--lighten-2">place</v-icon>
+              </v-list-tile-action>
+              <v-list-tile-content>
+                <v-list-tile-title>Chicago, US</v-list-tile-title>
+              </v-list-tile-content>
+            </v-list-tile>
+            <v-list-tile>
+              <v-list-tile-action>
+                <v-icon class="blue--text text--lighten-2">email</v-icon>
+              </v-list-tile-action>
+              <v-list-tile-content>
+                <v-list-tile-title>john@vuetifyjs.com</v-list-tile-title>
+              </v-list-tile-content>
+            </v-list-tile>
+          </v-list>
+        </v-card>
+      </v-flex>
+    </v-layout>
+  </v-container>
+</section>
+
+<section>
+  <inmo-map ref="inmomap" style="min-height: 100px;" :markers="<%= @markers.to_json %>" :zoom="15">
+  </inmo-map>
+</section>
