--- a/app/assets/stylesheets/property_web_scraper/spp_vuetify.css
+++ b/app/assets/stylesheets/property_web_scraper/spp_vuetify.css
@@ -8,12 +8,60 @@
   height: 100%;
 }
 */
-.vue-map-container .vue-map {
-  min-height: 500px
+
+/*// Extra small devices (portrait phones, less than 576px)*/
+@media (max-width: 575px) {
+  .vue-map-container .vue-map {
+    min-height: 500px;
+  }
+  .carousel {
+    min-height: 600px;
+  }
 }
+
+/*// Small devices (landscape phones, 576px and up)*/
+@media (min-width: 576px) and (max-width: 767px) {
+  .vue-map-container .vue-map {
+    min-height: 500px;
+  }
+  .carousel {
+    min-height: 600px;
+  }
+}
+
+/*// Medium devices (tablets, 768px and up)*/
+@media (min-width: 768px) and (max-width: 991px) {
+  .vue-map-container .vue-map {
+    min-height: 500px;
+  }
+  .carousel {
+    min-height: 600px;
+  }
+}
+
+/*// Large devices (desktops, 992px and up)*/
+@media (min-width: 992px) and (max-width: 1199px) {
+  .vue-map-container .vue-map {
+    min-height: 500px;
+  }
+  .carousel {
+    min-height: 600px;
+  }
+}
+
+/*// Extra large devices (large desktops, 1200px and up)*/
+@media (min-width: 1200px) {
+  .vue-map-container .vue-map {
+    min-height: 900px;
+  }
+  .carousel {
+    min-height: 1000px;
+  }
+}
+
+
+
 
 .main-header {
   font-weight: 500;
 }
-
-
