--- a/app/views/property_web_scraper/single_property_view/spp_vuetify/show.html.erb
+++ b/app/views/property_web_scraper/single_property_view/spp_vuetify/show.html.erb
@@ -1,9 +1,17 @@
 <section>
   <v-parallax src="<%= @main_image_url %>" height="600">
     <v-layout column align-center justify-center class="white--text">
-      <h1 class="main-header mb-2 display-4 primary--text text-xs-center">Property For Sale</h1>
-      <div class="mb-3 display-2 text-xs-center"><%= @listing.title %></div>
-
+      <h1 class="main-header mb-2 display-4 primary--text text-xs-center">
+        <% if @listing.for_sale %>
+          Property For Sale
+        <% end %>
+        <% if @listing.for_rent %>
+          Property For Rent
+        <% end %>
+      </h1>
+      <div class="mb-3 display-2 text-xs-center">
+        <%= @listing.title %>
+      </div>
     </v-layout>
   </v-parallax>
 </section>
@@ -64,7 +72,6 @@
     </v-flex>
   </v-layout>
 </section>
-
 <section>
   <v-container grid-list-xl>
     <v-layout row wrap justify-center class="my-5">
@@ -74,56 +81,71 @@
           <%== @listing.description %>
             <br>
             <br>
-          <social-sharing class="text-xs-center" inline-template>
-            <div class="social-icons icon-circle">
-              <network network="facebook">
-                <i class="fa fa-facebook"></i>
-              </network>
-              <network network="googleplus">
-                <i class="fa fa-google-plus"></i>
-              </network>
-              <network network="linkedin">
-                <i class="fa fa-linkedin"></i>
-              </network>
-              <network network="twitter">
-                <i class="fa fa-twitter"></i>
-              </network>
-            </div>
-          </social-sharing>
+            <social-sharing class="text-xs-center" inline-template>
+              <div class="social-icons icon-circle">
+                <network network="facebook">
+                  <i class="fa fa-facebook"></i>
+                </network>
+                <network network="googleplus">
+                  <i class="fa fa-google-plus"></i>
+                </network>
+                <network network="linkedin">
+                  <i class="fa fa-linkedin"></i>
+                </network>
+                <network network="twitter">
+                  <i class="fa fa-twitter"></i>
+                </network>
+              </div>
+            </social-sharing>
         </div>
       </v-flex>
     </v-layout>
   </v-container>
 </section>
-
 <section>
   <v-carousel>
     <v-carousel-item v-for="(item,i) in carouselPhotos" v-bind:src="item" :key="i"></v-carousel-item>
   </v-carousel>
 </section>
-
 <section>
   <v-container grid-list-xl>
     <v-layout row wrap justify-center class="my-5">
       <v-flex xs12 sm4>
-        <v-card class="elevation-0 transparent">
+        <v-card class="elevation-10 transparent">
           <v-card-title primary-title class="layout justify-center">
             <div class="headline">About PropertyWebScraper </div>
           </v-card-title>
           <v-card-text>
-            Cras facilisis mi vitae nunc lobortis pharetra. Nulla volutpat tincidunt ornare. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam in aliquet odio. Aliquam eu est vitae tellus bibendum tincidunt. Suspendisse potenti.
+            PropertyWebScraper was created to help users of my <a href="https://github.com/etewiah/property_web_builder">open source real estate website builder</a> import listings into their website.
+          </v-card-text>
+          <v-card-text>
+            Scraping websites for information has legal implications.  Please ensure that you use it legally. 
           </v-card-text>
         </v-card>
       </v-flex>
       <v-flex xs12 sm4 offset-sm1>
         <v-card class="elevation-0 transparent">
           <v-card-title primary-title class="layout justify-center">
-            <div class="headline">Contact PropertyWebScraper</div>
+            <div class="headline">Find out more</div>
           </v-card-title>
           <v-card-text>
-            Cras facilisis mi vitae nunc lobortis pharetra. Nulla volutpat tincidunt ornare.
+            Find out more about PropertyWebScraper and PropertyWebBuilder from the links below.
           </v-card-text>
-          <v-list class="transparent">
+          <div class="social-icons icon-circle text-xs-center">
+            <a href="https://github.com/etewiah/property_web_builder" title="Github" target="_blank" class="">
+            <i class="fa fa-github"></i>
+            </a>
+            <a href="https://www.facebook.com/propertywebbuilder" title="Facebook" target="_blank" class="">
+            <i class="fa fa-facebook"></i>
+            </a>
+            <a href="https://twitter.com/prptywebbuilder" title="Twitter" target="_blank" class="">
+            <i class="fa fa-twitter"></i>
+            </a>
+            <a href="https://www.linkedin.com/company/propertywebbuilder" title="Linked In" target="_blank" class="">
+            <i class="fa fa-linkedin"></i>
+            </a>
+          </div>
+          <v-list class="transparent" style="display: none;">
             <v-list-tile>
               <v-list-tile-action>
                 <v-icon class="blue--text text--lighten-2">phone</v-icon>
@@ -154,7 +176,6 @@
     </v-layout>
   </v-container>
 </section>
-
 <section>
   <inmo-map ref="inmomap" style="min-height: 100px;" :markers="<%= @markers.to_json %>" :zoom="15">
   </inmo-map>
