Fix idealista image retrieval

--- a/app/views/property_web_scraper/scraper/_retrieve_results.html.erb
+++ b/app/views/property_web_scraper/scraper/_retrieve_results.html.erb
@@ -18,7 +18,7 @@
   <tbody>
   </tbody>
 </table>
-<div style="display: none;">
+<div style="display: block;">
   <strong>Images</strong>
   <% @image_urls.each do |listing_image_url| %>
     <div>
