Display properties from mls

--- a/app/assets/stylesheets/property_web_scraper/application.css
+++ b/app/assets/stylesheets/property_web_scraper/application.css
@@ -14,7 +14,7 @@
  *= require_self
  */
 
-.url_input input {
+.login_url input, .password input, .url_input input, .username input, .url_input input {
   width: 80%;
   padding: 6px;
   margin: 10px;
