--- a/app/views/property_web_scraper/_header.html.erb
+++ b/app/views/property_web_scraper/_header.html.erb
@@ -2,8 +2,13 @@
   <nav class="container">
     <div class="d-flex justify-content-between hidden-lg-up">
       <a class="navbar-brand" href="/">
-        Home
+        Website Scraper
       </a>
+      ||
+      <a class="navbar-brand" href="/mls">
+        MLS Importer
+      </a>
+
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#bd-main-nav" aria-controls="bd-main-nav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -11,8 +16,14 @@
 
     <div class="collapse navbar-collapse" id="bd-main-nav">
       <ul class="nav navbar-nav">
-        <li class="nav-item">
-          <a class="nav-item nav-link" href="/" onclick="ga('send', 'event', 'Navbar', 'Community links', 'Docs');">Home</a>
+        <li class="nav-item pull-left">
+      <a class="nav-item nav-link pull-left" href="/">
+        Website Scraper
+      </a>
+      <a class="nav-item nav-link pull-left" href="/mls">
+        MLS Importer
+      </a>
+
         </li>
       </ul>
     </div>
