--- a/app/views/property_web_scraper/mls/_feedback_form.html.erb
+++ b/app/views/property_web_scraper/mls/_feedback_form.html.erb
@@ -4,9 +4,9 @@
       <p>Help us improve this product by giving us some feedback:</p>
     </blockquote>
     <p>
-      <form action="https://formspree.io/pws@propertywebbuilder.com" method="POST">
+      <form action="https://formspree.io/mls@propertywebbuilder.com" method="POST">
         <div class="form-group row">
-          <label for="example-url-input" class="col-2 col-form-label">Url you would like to scrape</label>
+          <label for="example-url-input" class="col-2 col-form-label">MLS you would like to access</label>
           <div class="col-10">
             <input class="form-control" type="url" value="" id="example-url-input">
           </div>
