--- a/app/views/property_web_scraper/scraper/_retrieve_results.html.erb
+++ b/app/views/property_web_scraper/scraper/_retrieve_results.html.erb
@@ -28,5 +28,5 @@
 </div>
 
   <div>
-    <%= link_to "Single Page view", single_property_view_path %>
+    <%= link_to "Single Page view", single_property_view_path(url: @listing.import_url) %>
   </div>
