--- a/app/views/property_web_scraper/mls/welcome.html.erb
+++ b/app/views/property_web_scraper/mls/welcome.html.erb
@@ -6,7 +6,7 @@
     <h5>This functionality is not complete yet.  Contact us via the form below with your feedback to help this project</h5>
     <p></p>
     <% if @prompt_for_mls %>
-      <%= form_tag("/mls", method: "get") do %>
+      <%= form_tag("#{root_path}mls", method: "get") do %>
         <%= select_tag 'mls_slug', options_from_collection_for_select(PropertyWebScraper::MlsImportSource.all, :slug, :displayName), :onchange => "this.form.submit();"  %>
 
         <%= submit_tag("Go") %>
